# OpenCG

./: CMakeLists.txt  OpenCG.cpp  README.md
CGLib/: CMakeLists.txt  OpenCG.h  OpenCG.h~
CGLib/Core/: CGConfig.h  CGConvolution.cpp  CGConvolution.cu  CGConvolution.h  CGCore.h  CGDwtHaar.cpp  CGDwtHaar.cu  CGDwtHaar.h  CGFilter.cpp  CGFilter.cu  CGFilter.h  CGImage.h  CGPyramid.cpp  CGPyramid.cu  CGPyramid.h
CGLib/Hog/: CGHog.h  CGHogConfig.h  CGHogConfig.h~  CGHogEngine.cpp  CGHogEngine.cu  CGHogEngine.h  CGHogHistogram.cpp  CGHogHistogram.cu  CGHogHistogram.h  CGHogSvmEvaluate.cpp  CGHogSvmEvaluate.cu  CGHogSvmEvaluate.h
